--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
 			<version>1.9.21</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>21.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
