--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.url = jdbc:mysql://localhost:3306/familytree
+spring.datasource.url = jdbc:mysql://localhost:3307/familytree
 spring.datasource.username = root
-spring.datasource.password = admin
+spring.datasource.password = root
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
 
